# policyflow-ai

./: .env.example  .gitignore  CLAUDE.md  FRONTEND-CLAUDE-PLAN.md  README.md  UI-REVIEW.md  pyproject.toml  requirements.txt  start.bat  start.py
docs/: 01-architecture-design.md  02-database-design-sqlite.md  03-api-design.md  04-ai-pipeline-rag-eval-design.md  05-development-roadmap.md  06-frontend-implementation-design.md  07-phase5-acceptance.md  08-de-toy-multiagent-skill-eval-strategy.md  09-interview-demo-script.md
frontend/: .env.example  .env.production.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.production.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: rehearse_interview_checklist.py  reindex_lightrag.py  seed_demo_data.py  seed_enterprise_docs.py
tests/: test_bm25_hybrid_retrieval.py  test_embedding_retry.py  test_f4_frontend_contract.py  test_f5_frontend_contract.py  test_f6_frontend_contract.py  test_inprocess_lightrag.py  test_kb_frontend_contract.py  test_knowledge_base_routing.py  test_lightrag_retrieve_concurrency.py  test_llm_rate_limit.py  test_local_rerank.py  test_memory_management_api.py  test_memory_system.py  test_model_settings.py  test_phase0.py  test_phase1_auth.py  test_phase1_knowledge.py  test_phase2_rag_chat.py  test_phase3_skill_draft_mcp_memory.py  test_phase4_faq_eval.py  test_phase5_acceptance.py  test_pipeline_tot.py  test_plan_branch.py  test_plan_executor.py  test_plan_normalize.py  test_query_rewrite.py  test_ragas_router_verifier.py  test_reflection_loop.py  test_skill_answer_multidoc.py  test_turn_state.py  (+1 more)
(+280 files in other folders)
