[project]
name = "policyflow-ai"
version = "0.1.0"
description = "Enterprise Policy Assistant - FastAPI + SQLModel + SQLite"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Shen-An", email = "shen.an@example.com"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "python-docx>=1.1.2",
    "pypdf>=5.0.0",
    "lightrag-hku==1.5.4",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ipython>=8.0.0",
]
ragas = [
    "ragas>=0.2.0",
    "datasets>=2.19.0",
]

[project.scripts]
start = "backend.app.main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["docx.*", "pypdf.*", "lightrag.*", "rank_bm25.*"]
ignore_missing_imports = true
